Missing preview image in compositing file output node #84815

Closed
opened 2021-01-18 10:31:31 +01:00 by Reiner Prokein · 20 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.89

Blender Version
Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-01-17 07:30, hash: 14bb9f09ab

Short description of error
The compositing file output node does not show a preview image when expanded.

Exact steps for others to reproduce the error

Open Blender.
Switch to Compositing Layout.
Render image.
Activate use Nodes.
Add a File Output node.
Expand it.
The place where the preview image should be shows empty.

preview.jpg

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.89 **Blender Version** Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-01-17 07:30, hash: `14bb9f09ab` **Short description of error** The compositing file output node does not show a preview image when expanded. **Exact steps for others to reproduce the error** Open Blender. Switch to Compositing Layout. Render image. Activate use Nodes. Add a File Output node. Expand it. The place where the preview image should be shows empty. ![preview.jpg](https://archive.blender.org/developer/F9585063/preview.jpg)
Author

Added subscriber: @tiles

Added subscriber: @tiles
Member

Added subscriber: @filedescriptor

Added subscriber: @filedescriptor
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can reproduce the issue, but it seems that even in 2.79 the output node did not have an image preview. I think this is a limitation for now.

I can reproduce the issue, but it seems that even in 2.79 the output node did not have an image preview. I think this is a limitation for now.
Member

Added subscriber: @zazizizou

Added subscriber: @zazizizou

Added subscriber: @swain

Added subscriber: @swain

Hi, I am starting my journey to contribute to Blender and got curious about this issue as it would help me understand the inner working of nodes. I have recreated this issue and have been going through the code.
From my understanding the File Output node's preview should behave in the same way as Viewer node does. In COM_OutputFileNode.cc, I see converter.addNodeInputPreview being used the same way as in the COM_ViewerNode.cc but it doesn't seem to work in the former. In the Viewer node we are passing just the image socket to it, while in File Output node we are looping through and passing the inputs. Is this what should be done if we have just Png format instead of OpenEXR and there is only one input image socket?
I need to go a bit deeper into NodeConverter class and NodeOperation. The code comments do help but where can I find more about them.

Hi, I am starting my journey to contribute to Blender and got curious about this issue as it would help me understand the inner working of nodes. I have recreated this issue and have been going through the code. From my understanding the File Output node's preview should behave in the same way as Viewer node does. In COM_OutputFileNode.cc, I see converter.addNodeInputPreview being used the same way as in the COM_ViewerNode.cc but it doesn't seem to work in the former. In the Viewer node we are passing just the image socket to it, while in File Output node we are looping through and passing the inputs. Is this what should be done if we have just Png format instead of OpenEXR and there is only one input image socket? I need to go a bit deeper into NodeConverter class and NodeOperation. The code comments do help but where can I find more about them.
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Member

Hmm a bit of a one off issue.

File output node is only executed when doing final composite.
Previews are only updated when editing.

This could be changed by changing the OutputFileNode::convertToOperations

  if (!context.isRendering()) {
Hmm a bit of a one off issue. File output node is only executed when doing final composite. Previews are only updated when editing. This could be changed by changing the `OutputFileNode::convertToOperations` ``` if (!context.isRendering()) { ```

Added subscriber: @DeanKJones

Added subscriber: @DeanKJones

Removed subscriber: @DeanKJones

Removed subscriber: @DeanKJones
Dean Jones self-assigned this 2021-04-16 17:04:11 +02:00

Hi, just submitted a possible fix #84815 : Missing preview image . I would be interested to know if I could have submitted the diff in a better way.

Hi, just submitted a possible fix [#84815 : Missing preview image ](https://developer.blender.org/D10995). I would be interested to know if I could have submitted the diff in a better way.

Added subscriber: @kotelifelif

Added subscriber: @kotelifelif

In file node_edit.c in method compo_startjob() we set value of rendering, and use it in OutputFileNode::convertToOperations, that is why

if (!context.isRendering()) {
}

is false in all cases.

In file node_edit.c in method compo_startjob() we set value of rendering, and use it in OutputFileNode::convertToOperations, that is why ``` if (!context.isRendering()) { } ``` is false in all cases.

Added subscriber: @niyanx

Added subscriber: @niyanx

Added subscriber: @PierreRisch

Added subscriber: @PierreRisch

This issue was referenced by e4278b72bb

This issue was referenced by e4278b72bb1a658d2187040bd5c71c598b6c16d4
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Member

Fixed e4278b72bb

Fixed e4278b72bb
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
11 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#84815
No description provided.